refactor: best practice

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = inventory/hosts
+inventory = production
 roles_path = .ansible/roles
 vault_password_file = ~/.vault_pass.txt
 # host_key_checking = False
