--- a/files/host/manager.home/config/gemini-discord-bot/app.env
+++ b/files/host/manager.home/config/gemini-discord-bot/app.env
@@ -1,6 +1,6 @@
 # Create at https://makersuite.google.com/
 GOOGLE_AI_KEY="{{ gemini.apiKey }}"
 # Create at https://discord.com/developers/applications
-DISCORD_BOT_TOKEN="{{ discord.bot.token.zousan }}"
+DISCORD_BOT_TOKEN="{{ discord.bot.token.gemini }}"
 # Disable history by setting to 0
 MAX_HISTORY=15
