--- a/files/host/manager.home/config/shellpot/webhook.env
+++ b/files/host/manager.home/config/shellpot/webhook.env
@@ -1,3 +1,4 @@
 WEBHOOK_MENTION_DEVELOPER="{{ discord.mention.developer }}"
+WEBHOOK_MENTION_GEMINI="{{ discord.mention.gemini }}"
 WEBHOOK_BACKUP="{{ discord.webhook.monitoring.raspberrypi }}"
 WEBHOOK_SMART="{{ discord.webhook.monitoring.raspberrypi }}"
