feat: grafana exporter

--- a/files/host/manager.home/config/shellpot/grafana-exporter.env
+++ b/files/host/manager.home/config/shellpot/grafana-exporter.env
@@ -1,3 +1,2 @@
 API_KEY="{{ grafana.apiKey.grafanaExporter }}"
-GIT_AUTHOR_NAME="Grafana Exporter"
-GIT_AUTHOR_EMAIL="noreply@nana4.net"
+COMMIT_AUTHOR="Grafana Exporter <noreply@nana4.net>"
