--- a/roles/install_tools/tasks/main.yml
+++ b/roles/install_tools/tasks/main.yml
@@ -6,3 +6,9 @@
       - git
       - jq
     update_cache: true
+
+- name: Transfer .gitconfig
+  ansible.builtin.copy:
+    src: "{{ role_path }}/files/.gitconfig"
+    dest: "{{ ansible_env.HOME }}/"
+    mode: "0644"
