--- a/roles/install_tools/tasks/main.yml
+++ b/roles/install_tools/tasks/main.yml
@@ -9,6 +9,6 @@
 
 - name: Transfer .gitconfig
   ansible.builtin.copy:
-    src: "{{ role_path }}/files/.gitconfig"
+    src: ".gitconfig"
     dest: "{{ ansible_env.HOME }}/"
     mode: "0644"
