refactor: deploy-webhook.sh

--- a/files/host/manager.home/config/deploy-webhook/app.env
+++ b/files/host/manager.home/config/deploy-webhook/app.env
@@ -1,3 +1,6 @@
+# API
 WEBHOOK_SECRET="{{ deployWebhook.secret }}"
 DISCORD_WEBHOOK_URL="{{ discord.webhook.cicd.deployWebhook }}"
 DISCORD_MENTION="{{ discord.mention.developer }}"
+# Shell
+DEPLOY_USER="{{ deployWebhook.deployUser}}"
