--- a/files/host/manager.home/config/shellpot/grafana-exporter.env
+++ b/files/host/manager.home/config/shellpot/grafana-exporter.env
@@ -1,2 +1,3 @@
+GRAFANA_HOST="{{ grafana.host.internal }}"
 API_KEY="{{ grafana.apiKey.grafanaExporter }}"
 COMMIT_AUTHOR="Grafana Exporter <noreply@nana4.net>"
