--- a/roles/mount_backup_server/tasks/main.yml
+++ b/roles/mount_backup_server/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Ensure backup mount directory exists
   become: true
   ansible.builtin.file:
-    path: "{{ mount_backup_server_mount_dir }}"
+    path: "{{ backup.mount_dir }}"
     state: directory
     mode: "0755"
 
@@ -18,7 +18,7 @@
 - name: Ensure CIFS mount is present in /etc/fstab and mounted
   become: true
   ansible.posix.mount:
-    path: "{{ mount_backup_server_mount_dir }}"
+    path: "{{ backup.mount_dir }}"
     src: "//{{ backup.host }}/{{ backup.server_dir }}"
     fstype: "cifs"
     opts: "credentials={{ mount_backup_server_credentials }},vers=2.0"
