--- a/host_vars/manager.home.yml
+++ b/host_vars/manager.home.yml
@@ -30,3 +30,6 @@ cron_jobs:
   - name: "grafana-exporter-sh"
     job: "{{ ansible_env.HOME }}/repository/shellpot/grafana-exporter.sh"
     minute: "*/10"
+  - name: "push-home-wiki-sh"
+    job: "{{ ansible_env.HOME }}/repository/shellpot/push-home-wiki.sh"
+    minute: "*/10"
