feat: hass-config

--- a/roles/setup_manager_app/vars/main.yml
+++ b/roles/setup_manager_app/vars/main.yml
@@ -4,6 +4,8 @@ setup_manager_app_clone_repositories:
   - monitoring
   - nana4-net
   - shellpot
+  - home-wiki
+  - hass-config
 
 setup_manager_app_base_directories:
   - "repository"
@@ -18,7 +20,6 @@ setup_manager_app_data_directories:
   - ring-face-recognition
   - ring-face-recognition/snapshot
   - wisun2mqtt
-  - home-wiki
 
 setup_manager_app_add_cmdline_txt:
   - "cgroup_enable=cpuset"
