--- a/files/host/manager.home/config/grafana-sync/app.env
+++ b/files/host/manager.home/config/grafana-sync/app.env
@@ -1,2 +1,2 @@
 GRAFANA_HOST="{{ grafana.host.internal }}"
-COMMIT_AUTHOR="Grafana Sync Bot <noreply@nana4.net>"
+COMMIT_AUTHOR="Grafana Sync Bot <{{ github.email.bot }}>"
