--- a/files/host/manager.home/config/hass-config-sync/app.env
+++ b/files/host/manager.home/config/hass-config-sync/app.env
@@ -1,3 +1,3 @@
 HASS_USER="root"
 HASS_HOST="hass.home"
-COMMIT_AUTHOR="Home Assistant Config Sync Bot <noreply@nana4.net>"
+COMMIT_AUTHOR="Home Assistant Config Sync Bot <{{ github.email.bot }}>"
