--- a/files/host/manager.home/config/ring-face-recognition/app.env
+++ b/files/host/manager.home/config/ring-face-recognition/app.env
@@ -9,5 +9,6 @@ DETECT_START_X=200
 DETECT_START_Y=200
 DETECT_END_X=880
 DETECT_END_Y=880
-FACE_MATCH_THRESHOLD=94
+FACE_MATCH_THRESHOLD=95
+RECOGNITION_MAX_RETRIES=3
 VIDEO_STREAM_FPS=7
