--- a/group_vars/raspberrypi_door.yml
+++ b/group_vars/raspberrypi_door.yml
@@ -1,4 +1,7 @@
 ---
+nodejs_version: 22.x
+nodejs_install_npm_user: root
+
 authorized_key_names:
   - manager.home
 alloy_config_name: config_door.alloy
