--- a/files/host/manager.home/config/common/webhook.env
+++ b/files/host/manager.home/config/common/webhook.env
@@ -2,3 +2,4 @@ WEBHOOK_MENTION_DEVELOPER="{{ discord.mention.developer }}"
 WEBHOOK_MENTION_GEMINI="{{ discord.mention.gemini }}"
 WEBHOOK_BACKUP="{{ discord.webhook.monitoring.raspberrypi }}"
 WEBHOOK_SMART="{{ discord.webhook.monitoring.raspberrypi }}"
+WEBHOOK_DEPLOY="{{ discord.webhook.cicd.deployWebhook }}"
