--- a/roles/configure_bash/tasks/main.yml
+++ b/roles/configure_bash/tasks/main.yml
@@ -5,6 +5,7 @@
     name:
       - peco
     update_cache: true
+    state: latest
 
 - name: Write variable content to .contextcolor
   ansible.builtin.copy:
