--- a/roles/setup_manager_app/vars/main.yml
+++ b/roles/setup_manager_app/vars/main.yml
@@ -21,6 +21,11 @@ setup_manager_app_data_directories:
   - ring-face-recognition/snapshot
   - wisun2mqtt
   - linkstack
+  - authentik
+  - authentik/postgresql
+  - authentik/redis
+  - authentik/media
+  - authentik/custom-templates
 
 setup_manager_app_add_cmdline_txt:
   - "cgroup_enable=cpuset"
