feat: remove config.json
https://github.com/banban525/echonetlite2mqtt/releases/tag/v3.5.0

--- a/files/host/manager.home/config/echonetlite2mqtt/app.env
+++ b/files/host/manager.home/config/echonetlite2mqtt/app.env
@@ -1,3 +1,5 @@
 REST_API_PORT="{{ echonetlite2mqtt.port }}"
 ECHONET_TARGET_NETWORK="{{ echonetlite2mqtt.targetNetwork }}"
-MQTT_OPTION_FILE=/app/config/config.json
+MQTT_CLIENT_ID="echonetlite2mqtt"
+MQTT_USERNAME="{{ mqtt.username }}"
+MQTT_PASSWORD="{{ mqtt.password }}"
