--- a/host_vars/octopi.home.yml
+++ b/host_vars/octopi.home.yml
@@ -4,5 +4,5 @@ shell_context_color: 70
 cron_jobs:
   # Hourly
   - name: "sync-backup"
-    job: "rsync -a {{ ansible_env.HOME }}/.octoprint/data/backup/ {{ backup.mount_dir }}/octopi.home/"
+    job: "rsync -a --delete {{ ansible_env.HOME }}/.octoprint/data/backup/ {{ backup.mount_dir }}/octopi.home/"
     minute: 0
