--- a/roles/setup_manager_data/tasks/main.yml
+++ b/roles/setup_manager_data/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Check if data exists
   ansible.builtin.stat:
     path: "{{ ansible_env.HOME }}/data"
-  register: home_data_dir
+  register: setup_manager_data_dir
 
 - name: Extract data directory from archive only if not exists
   become: true
@@ -13,4 +13,4 @@
     extra_opts:
       - --strip-components=1
       - ./data
-  when: not home_data_dir.stat.exists
+  when: not setup_manager_data_dir.stat.exists
