--- a/setup_door.yml
+++ b/setup_door.yml
@@ -4,6 +4,8 @@
   roles:
     - role: install_tools
       tags: install_tools
+    - role: configure_network_manager
+      tags: configure_network_manager
     - role: configure_ssh
       tags: configure_ssh
     - role: configure_motd
