--- a/roles/setup_router_dnsmasq/tasks/main.yml
+++ b/roles/setup_router_dnsmasq/tasks/main.yml
@@ -1,30 +1,7 @@
 ---
-- name: Get local file hash
-  ansible.builtin.set_fact:
-    setup_router_dnsmasq_local_hash: "{{ lookup('ansible.builtin.file', 'files/host/' ~ inventory_hostname ~ '/dnsmasq.conf') | hash('sha256') }}"
-
-- name: Get remote file hash
-  ansible.builtin.raw: "cat {{ setup_router_dnsmasq_target_path }} | head -c -1 | sha256sum | awk '{print $1}'"
-  register: setup_router_dnsmasq_setup_router_dnsmasq_remote_hash_result
-  ignore_errors: true
-  changed_when: false
-
-- name: Set remote hash fact
-  ansible.builtin.set_fact:
-    setup_router_dnsmasq_remote_hash: "{{ setup_router_dnsmasq_setup_router_dnsmasq_remote_hash_result.stdout | default('') | trim }}"
-
-- name: Debug hash values
-  ansible.builtin.debug:
-    msg: "Local hash: {{ setup_router_dnsmasq_local_hash }}, Remote hash: {{ setup_router_dnsmasq_remote_hash }}"
-
-- name: Update config if hashes are different
-  ansible.builtin.raw:
-    "echo '{{ lookup('ansible.builtin.file', 'files/host/' ~ inventory_hostname ~ '/dnsmasq.conf') }}'
-    > {{ setup_router_dnsmasq_target_path }}"
-  when: setup_router_dnsmasq_local_hash != setup_router_dnsmasq_remote_hash
-  changed_when: true
-
-- name: Restart Dnsmasq if config changed
-  ansible.builtin.raw: "service restart_dnsmasq"
-  when: setup_router_dnsmasq_local_hash != setup_router_dnsmasq_remote_hash
-  changed_when: true
+- name: Deploy dnsmasq.conf
+  ansible.builtin.copy:
+    src: "files/host/{{ inventory_hostname }}/dnsmasq.conf"
+    dest: "{{ setup_router_dnsmasq_target_path }}"
+    mode: "0666"
+  notify: Restart dnsmasq
