--- a/roles/router_install_node_exporter/vars/main.yml
+++ b/roles/router_install_node_exporter/vars/main.yml
@@ -6,3 +6,4 @@ router_install_node_exporter_url:
   https://github.com/prometheus/node_exporter/releases/download/v{{
   router_install_node_exporter_version }}/{{ router_install_node_exporter_package }}
 router_install_node_exporter_install_dir: "{{ router_app_dir }}/node_exporter"
+router_install_node_exporter_options: --no-collector.netdev --collector.filesystem.mount-points-exclude="^/data$|^/jffs$|^/tmp/mnt(/defaults)?$"
