fix: use templates

--- a/roles/install_tools/tasks/main.yml
+++ b/roles/install_tools/tasks/main.yml
@@ -11,6 +11,6 @@
 
 - name: Transfer .gitconfig
   ansible.builtin.template:
-    src: "files/.gitconfig"
+    src: ".gitconfig"
     dest: "{{ ansible_env.HOME }}/"
     mode: "0644"
