--- a/roles/manager_setup_data/tasks/main.yml
+++ b/roles/manager_setup_data/tasks/main.yml
@@ -2,15 +2,15 @@
 - name: Check if data exists
   ansible.builtin.stat:
     path: "{{ ansible_env.HOME }}/data"
-  register: setup_manager_data_dir
+  register: manager_setup_data_dir
 
 - name: Extract data directory from archive only if not exists
   become: true
   ansible.builtin.unarchive:
-    src: "{{ setup_manager_data_backup_file }}"
+    src: "{{ manager_setup_data_backup_file }}"
     dest: "{{ ansible_env.HOME }}"
     remote_src: true
     extra_opts:
       - --strip-components=1
       - ./data
-  when: not setup_manager_data_dir.stat.exists
+  when: not manager_setup_data_dir.stat.exists
