--- a/roles/install_nodejs/tasks/main.yml
+++ b/roles/install_nodejs/tasks/main.yml
@@ -23,10 +23,17 @@
   when: install_nodejs_setup_needed
 
 - name: Setup NodeSource Node.js repository
+  become: true
   ansible.builtin.command:
     cmd: "{{ install_nodejs_setup_script }}"
   when: install_nodejs_setup_needed
   changed_when: true
+
+- name: Remove Temporary File
+  ansible.builtin.file:
+    dest: "{{ install_nodejs_setup_script }}"
+    state: absent
+  when: install_nodejs_setup_needed
 
 - name: Install Node.js
   become: true
@@ -34,9 +41,3 @@
     name: nodejs
     state: latest
     update_cache: true
-
-- name: Remove Temporary File
-  ansible.builtin.file:
-    dest: "{{ install_nodejs_setup_script }}"
-    state: absent
-  when: install_nodejs_setup_needed
