feat: set smtp server

--- a/roles/manager_setup_config/templates/config/authentik/app.env
+++ b/roles/manager_setup_config/templates/config/authentik/app.env
@@ -4,6 +4,9 @@ AUTHENTIK_POSTGRESQL__HOST=postgresql
 AUTHENTIK_POSTGRESQL__NAME="{{ authentik.db.name }}"
 AUTHENTIK_POSTGRESQL__USER="{{ authentik.db.user }}"
 AUTHENTIK_POSTGRESQL__PASSWORD="{{ authentik.db.password }}"
+AUTHENTIK_EMAIL__HOST=mailpit
+AUTHENTIK_EMAIL__PORT=1025
+AUTHENTIK_EMAIL__FROM=authentik@manager.home
 AUTHENTIK_WEB__WORKERS=1
 AUTHENTIK_WEB__THREADS=2
 AUTHENTIK_WORKER__PROCESSES=1
