--- a/setup_manager.yml
+++ b/setup_manager.yml
@@ -2,8 +2,8 @@
 - name: Setup Raspberry Pi Manager
   hosts: raspberrypi_manager
   roles:
-    - role: add_cmdline_txt
-      tags: add_cmdline_txt
+    - role: configure_cmdline_txt
+      tags: configure_cmdline_txt
 
     - role: install_tools
       tags: install_tools
