feat: 警告が出ないようにする

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,7 @@
 inventory = hosts
 roles_path = .ansible/roles
 vault_password_file = ~/.vault_pass.txt
+inject_facts_as_vars = True
 # host_key_checking = False
 
 [ssh_connection]
