--- a/roles/configure_octoprint/tasks/main.yml
+++ b/roles/configure_octoprint/tasks/main.yml
@@ -10,7 +10,7 @@
   ansible.builtin.command: >
     yq -i '.accessControl = {
       "addRemoteUsers": true,
-      "remoteUserHeader": "X-authentik-username",
+      "remoteUserHeader": "X-Username",
       "trustRemoteUser": true,
       "defaultReauthenticationTimeout": 0
     }' {{ configure_octoprint_config_path }}.tmp
